Fixed username on members page to link to profile. Added more height to groups index page as firefox was cutting off report group link

--- a/src/Platformd/SpoutletBundle/Resources/public/css/forms.css
+++ b/src/Platformd/SpoutletBundle/Resources/public/css/forms.css
@@ -1,4 +1,4 @@
-/*input[type="text"] {
+input[type="text"] {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
